# stm32-ecu

./: .clang-format  .gitignore  .gitmodules  .mxproject  .project  CMakeLists.txt  README.md  stm32-ecu.ioc  stm32-ecu.txt
CA7/: .gitignore  .project  CMakeLists.txt  fw_cortex_m4.sh  manifest.prop
CA7/CustomKernel/drivers/: stm32ecu
CA7/CustomKernel/drivers/stm32ecu/: Makefile  stm32ecu.c
CA7/CustomKernel/include/uapi/linux/: stm32ecu
CA7/CustomKernel/include/uapi/linux/stm32ecu/: shared  stm32ecu.h
CA7/CustomKernel/patches/: 001-stm32ecu-make.patch
CA7/CustomModules/stm32ecu/: Kconfig  Makefile  stm32ecu.c
CA7/DeviceTree/stm32-ecu/kernel/: stm32mp157d-stm32-ecu-mx.dts
CA7/DeviceTree/stm32-ecu/optee-os/: stm32mp157d-stm32-ecu-mx.dts
CA7/DeviceTree/stm32-ecu/tf-a/: stm32mp15-mx.dtsi  stm32mp157d-stm32-ecu-mx-fw-config.dts  stm32mp157d-stm32-ecu-mx.dts
CA7/DeviceTree/stm32-ecu/u-boot/: stm32mp15-mx.dtsi  stm32mp157d-stm32-ecu-mx-u-boot.dtsi  stm32mp157d-stm32-ecu-mx.dts  stm32mp157d-stm32-ecu-mx.dts.bak
CA7/gdbscripts/: Path_env.py  Setup.gdb  dbg.cfg  moduleDbg.gdb
CA7/linux-5.10.10/: .cproject  .gitignore  .project  build-kernel.sh  gdb-run.sh  ocd-run.sh
CA7/linux-5.10.10/linux-5.10.10/arch/arm/boot/: uInitrd
CA7/linux-5.10.10/linux-5.10.10/arch/arm/boot/dts/: stm32mp157d-stm32-ecu-mx.dts
CA7/linux-5.10.10/linux-5.10.10/drivers/: Kconfig  Makefile
CA7/linux-5.10.10/linux-5.10.10/drivers/rpmsg/: rpmsg_tty.c
CA7/linux-5.10.10/linux-5.10.10/drivers/stm32ecu/: Kconfig  Makefile  stm32ecu.c
CA7/linux-5.10.10/linux-5.10.10/include/uapi/linux/stm32ecu/: CAN_Msg.h  CRC.h  ECU_Error.h  ECU_Msg.h  ESP32_Msg.h  Header.h  Interproc_Msg.h  Parameter.h  shared  stm32ecu.h  types.h
CA7/linux-5.10.61/: .cproject  .project  .uboot_dt_prompt_update.sh  Makefile.ide
CA7/rootfs/home/root/: fw_cortex_m4.sh
CA7/stm32-ecu-manager/: .cproject  .gitignore  .project  CMakeLists.txt  main.cpp  setup_grpc.sh  setup_grpc_arm.sh  shared  stm32-ecu-manager.launch
CA7/stm32-ecu-manager/client/: main.cpp
CA7/stm32-ecu-manager/protos/: ecu.proto
CA7/stm32-ecu-manager/server/: main.cpp
CM4/: .cproject  .gitignore  .project  CMakeLists.txt  STM32MP157DACX_RAM.ld  stm32-ecu_CM4 Debug.launch  stm32-ecu_CM4 Engineering Debug.cfg  stm32-ecu_CM4 Engineering Debug.launch  stm32-ecu_CM4 Engineering Run.launch  stm32-ecu_CM4 Production Debug.cfg  stm32-ecu_CM4 Production Debug.launch  stm32-ecu_CM4 Production Run.launch
CM4/Core/Inc/: FreeRTOSConfig.h  main.h  program.h  rpmsg_manage.h  stm32.h  stm32_openamp_wrapper.h  stm32mp15xx_disco_conf.h  stm32mp1xx_hal_conf.h  stm32mp1xx_it.h
CM4/Core/Inc/system/: stm32_openamp_wrapper.h
CM4/Core/Src/: app_freertos.c  main.c  program.c  program.cpp  rpmsg_manage.c  stm32.c  stm32.cpp  stm32_openamp_wrapper.c  stm32mp1xx_hal_msp.c  stm32mp1xx_it.c  syscalls.c
CM4/Core/Src/ecu/: main.c  rpmsg_manage.c
CM4/Drivers/BSP/STM32MP15xx_DISCO/: stm32mp15xx_disco_conf_template.h
CM4/Drivers/MCP2515/include/: CANSPI.h  MCP2515.h
CM4/Drivers/MCP2515/src/: CANSPI.c  MCP2515.c
CM4/OPENAMP/: openamp.h  openamp_conf.h
CM4/RemoteProc/: fw_cortex_m4.sh
CM4/cmake/: arm-gcc-toolchain.cmake  toolchain.cmake
CM4/mms/app/ASSIState/include/: ASSIState.hpp  ASSIStateTypes.h
CM4/mms/app/ASSIState/src/: ASSIState.cpp
CM4/mms/app/Accumulator/src/: program.cpp
CM4/mms/app/AutonomousState/include/: AutonomousState.hpp  AutonomousStateTypes.h
CM4/mms/app/AutonomousState/src/: AutonomousState.cpp
CM4/mms/app/akku/src/: program.cpp
CM4/mms/bsw/linuxComms/include/: linuxComms.h  rpmsgManager.hpp
CM4/mms/bsw/linuxComms/src/: rpmsgManager.cpp
CM4/mms/bsw/stm32OpenampWrapper/include/: stm32OpenampWrapper.h
CM4/mms/bsw/stm32OpenampWrapper/src/: stm32OpenampWrapper.c
CM4/mms/bsw/stm32System/include/: stm32System.h
CM4/mms/bsw/stm32System/src/: stm32System.cpp
scripts/: build-kernel.sh  cmake-build.sh  combine_compile_commands.py  combine_compile_commands.sh  extlinux.conf  flash-kernel.sh  gdb-run-linux.sh  gdb-run-mcu.sh  gdb-run.sh  ocd-run.sh  setup.sh  update-firmware.sh
scripts/gdbscripts/: CM4-Eng.gdb  Path_env.py  Setup.gdb  dbg.cfg  moduleDbg.gdb
